language/move-lang/tests/move_check/expansion/restricted_struct_names.move
module M {
    struct address {}
    resource struct signer {}
    struct u8 {}
    struct u64 {}
    struct u128 {}
    struct vector<T> {}

    struct move_to_sender {}
    struct move_to {}
    struct move_from {}
    struct borrow_global {}
    struct borrow_global_mut {}
    struct exists {}
    struct freeze {}
    struct Self {}
}
